[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Manuel Lang <lang@reasonance.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "api.main:run_app"